Added Tekton files

--- a/tekton/pipeline-employee-ci.yaml
+++ b/tekton/pipeline-employee-ci.yaml
@@ -6,7 +6,7 @@ spec:
   params:
     - name: GIT_URL
     - name: GIT_REVISION
-      default: main
+      default: master
     - name: IMAGE
     - name: VERSION
 
