Added deployment version

--- a/tekton/pipeline-employee-ci.yaml
+++ b/tekton/pipeline-employee-ci.yaml
@@ -8,13 +8,14 @@ spec:
     - name: GIT_REVISION
       default: master
     - name: IMAGE
-    - name: VERSION
+    - name: VERSION_PREFIX
+      default: ""
 
   workspaces:
     - name: shared-workspace
 
   tasks:
-    - name: clone
+    - name: git-clone
       taskRef:
         name: git-clone
       params:
@@ -26,28 +27,40 @@ spec:
         - name: output
           workspace: shared-workspace
 
-    - name: maven
-      runAfter: ["clone"]
+    - name: maven-build
+      runAfter: ["git-clone"]
       taskRef:
         name: maven-build
       workspaces:
         - name: source
           workspace: shared-workspace
 
-    - name: docker
-      runAfter: ["maven"]
+    - name: generate-version
+      runAfter: ["maven-build"]
+      taskRef:
+        name: generate-version
+      params:
+        - name: prefix
+          value: $(params.VERSION_PREFIX)
+      workspaces:
+        - name: source
+          workspace: shared-workspace
+
+    - name: docker-image-build-push
+      runAfter: ["generate-version"]
       taskRef:
         name: docker-build-push
       params:
         - name: IMAGE
           value: $(params.IMAGE)
         - name: VERSION
-          value: $(params.VERSION)
+          value: $(tasks.generate-version.results.version)
       workspaces:
         - name: source
           workspace: shared-workspace
-    - name: deploy
-      runAfter: [ "docker" ]
+
+    - name: kubernetes-deploy
+      runAfter: ["docker-image-build-push"]
       taskRef:
         name: kubectl-deploy
       params:
@@ -56,6 +69,6 @@ spec:
         - name: CONTAINER_NAME
           value: employee
         - name: IMAGE
-          value: $(params.IMAGE):$(params.VERSION)
+          value: $(params.IMAGE):$(tasks.generate-version.results.version)
         - name: NAMESPACE
           value: default
