--- a/k8/service.yaml
+++ b/k8/service.yaml
@@ -5,8 +5,8 @@ metadata:
 spec:
   selector:
     app: employee
-  type: LoadBalancer
+  type: ClusterIP
   ports:
-    - port: 8081
+    - port: 80          # 👈 STANDARD SERVICE PORT
       targetPort: 8080
       protocol: TCP
